# rref_tenstorrent

./: CMakeLists.txt  rref_host.cpp  rref_launcher.cpp
kernels/: rref_compute  rref_reader.cpp  rref_write.cpp
